// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 1: cirno init 1`] = `
stdout: |2
   SUCCESS  Cirno project initialized at /data.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: releases
        entries: []
  - type: directory
    name: apps
    entries: []
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps: []
  - type: directory
    name: temp
    entries: []

`;

exports[`step 2: cirno import /fixtures/foo 1`] = `
stdout: |
  ➤ YN0000: · Yarn 4.3.1
  ➤ YN0000: ┌ Resolution step
  ➤ YN0000: └ Completed
  ➤ YN0000: ┌ Fetch step
  ➤ YN0000: └ Completed
  ➤ YN0000: ┌ Link step
  ➤ YN0000: └ Completed
  ➤ YN0000: · Done
   SUCCESS  Successfully imported instance cd5fbb72.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: directory
    name: apps
    entries:
      - type: directory
        name: cd5fbb72
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72
          name: foo
          backups: []
  - type: directory
    name: temp
    entries: []

`;

exports[`step 3: cirno backup <#1> 1`] = `
stdout: |2
   SUCCESS  Successfully created a backup instance 5ab7bff9.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: directory
    name: apps
    entries:
      - type: directory
        name: 5ab7bff9
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: cd5fbb72
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72
          name: foo
          backups:
            - id: 5ab7bff9
              type: manual
              createTime: '<timestamp>'
  - type: directory
    name: temp
    entries: []

`;

exports[`step 4: cirno restore <#1> 1`] = `
stdout: |2
   ERROR  Cannot restore to a head instance.
stderr: ''
code: 1
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: directory
    name: apps
    entries:
      - type: directory
        name: 5ab7bff9
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: cd5fbb72
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72
          name: foo
          backups:
            - id: 5ab7bff9
              type: manual
              createTime: '<timestamp>'
  - type: directory
    name: temp
    entries: []

`;

exports[`step 5: cirno backup <#1> 1`] = `
stdout: |2
   SUCCESS  Successfully created a backup instance b6394418.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: directory
    name: apps
    entries:
      - type: directory
        name: 5ab7bff9
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: b6394418
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: cd5fbb72
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72
          name: foo
          backups:
            - id: 5ab7bff9
              type: manual
              createTime: '<timestamp>'
            - id: b6394418
              type: manual
              createTime: '<timestamp>'
  - type: directory
    name: temp
    entries: []

`;

exports[`step 6: cirno restore <#2> 1`] = `
stdout: |2
   SUCCESS  App cd5fbb72 is successfully restored to backup 5ab7bff9.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: directory
    name: apps
    entries:
      - type: directory
        name: cd5fbb72
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72
          name: foo
          backups: []
  - type: directory
    name: temp
    entries: []

`;

exports[`step 7: cirno remove <#2> 1`] = `
stdout: |2
   ERROR  Instance 5ab7bff9 not found.
stderr: ''
code: 1
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: directory
    name: apps
    entries:
      - type: directory
        name: cd5fbb72
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72
          name: foo
          backups: []
  - type: directory
    name: temp
    entries: []

`;

exports[`step 8: cirno remove <#3> 1`] = `
stdout: |2
   ERROR  Instance b6394418 not found.
stderr: ''
code: 1
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: directory
    name: apps
    entries:
      - type: directory
        name: cd5fbb72
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72
          name: foo
          backups: []
  - type: directory
    name: temp
    entries: []

`;
